--- a/doze/res/xml/doze_settings.xml
+++ b/doze/res/xml/doze_settings.xml
@@ -36,8 +36,8 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="priximity_sensor"
-        android:title="@string/priximity_sensor_title" >
+        android:key="proxomity_sensor"
+        android:title="@string/proximity_sensor_title" >
 
         <SwitchPreference
             android:key="gesture_hand_wave"
