oxygen: overlay: Enable config_fpCancelIfNotIdle

--- a/overlay-aosp/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-aosp/frameworks/base/core/res/res/values/custom_config.xml
@@ -53,4 +53,7 @@
         <item>com.google.android.gms/com.google.android.gms.nearby.discovery.service.DiscoveryService</item>
         <item>com.google.android.gms/com.google.android.gms.nearby.messages.service.NearbyMessagesService</item>
     </string-array>
+
+    <!-- Whether to cancel fingerprint operation if not idle -->
+    <bool name="config_fpCancelIfNotIdle">true</bool>
 </resources>
